primeiro push do portifolio

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu Portfólio - Front-End</title>
   <!-- <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/responsivo.css"> -->
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/foto.css" class="hreaf">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/style3.css" class="hrea">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/dark.css">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/styles.css">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/menu.css">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/habilidades.css">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/projetos.css">
-  <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/contato.css">
+  <link rel="stylesheet" href="css/foto.css" class="hreaf">
+  <link rel="stylesheet" href="css/style3.css" class="hrea">
+  <link rel="stylesheet" href="css/dark.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/habilidades.css">
+  <link rel="stylesheet" href="css/projetos.css">
+  <link rel="stylesheet" href="css/contato.css">
   <!-- Importando a fonte personalizada -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <!-- Link para o Font Awesome (CDN) no <head> -->
@@ -63,7 +63,7 @@
     <span class="letra">M</span>
   </div>
     <h1></h1> <!-- Título será digitado aqui -->
-    <img src="../ZZ_ Nova pasta - Cópia/assets/eu/photo_6_2024-11-21_06-16-13.jpg" alt="">
+    <img src="assets/eu/photo_6_2024-11-21_06-16-13.jpg" alt="">
     <p></p>  <!-- Texto será digitado aqui -->
 </section>
 
@@ -88,15 +88,15 @@
   <div class="linguagens">
 
     <div class="quadrado">
-        <img src="../ZZ_ Nova pasta - Cópia/assets/HTML5_logo_and_wordmark.svg.png" alt="'logo do html'">
+        <img src="assets/HTML5_logo_and_wordmark.svg.png" alt="'logo do html'">
     </div>
 
     <div class="quadrado">
-        <img src="../ZZ_ Nova pasta - Cópia/assets/css.svg" alt="'logo do css'">
+        <img src="assets/css.svg" alt="'logo do css'">
     </div>
 
     <div class="quadrado">
-        <img src="../ZZ_ Nova pasta - Cópia/assets/1_tZHcs0d7MAG-BBcjBekZYA.png" alt="'logo do javascript'">
+        <img src="assets/1_tZHcs0d7MAG-BBcjBekZYA.png" alt="'logo do javascript'">
     </div>
   </div>
 
@@ -107,15 +107,15 @@
 <div class="linguagens linguagens2">
 
     <div class="quadrado quadrado2">
-        <img src="../ZZ_ Nova pasta - Cópia/assets/php.svg" alt="'logo do php'">
+        <img src="assets/php.svg" alt="'logo do php'">
     </div>
 
     <div class="quadrado quadrado2">
-        <img src="../ZZ_ Nova pasta - Cópia/assets/python.svg" alt="'logo do python'">
+        <img src="assets/python.svg" alt="'logo do python'">
     </div>
 
     <div class="quadrado quadrado2">
-        <img src="../ZZ_ Nova pasta - Cópia/assets/mysql.svg" alt="'logo do MySQL'">
+        <img src="assets/mysql.svg" alt="'logo do MySQL'">
     </div>
     
 </div>
@@ -136,13 +136,13 @@
     </div>
     <h2></h2> <!-- Título será digitado aqui -->
     <div class="proj proj1">
-      <img src="../ZZ_ Nova pasta - Cópia/assets/projeto/Captura de tela_19-11-2024_85835_.jpeg" alt="Projeto 1">
+      <img src="assets/projeto/Captura de tela_19-11-2024_85835_.jpeg" alt="Projeto 1">
       <h3>Projeto 1</h3>
       <p>Landing Page Hamburgueria</p>
     </div>
 
     <div class="proj proj2">
-      <img src="../ZZ_ Nova pasta - Cópia/assets/projeto/Home.png" alt="Projeto 1">
+      <img src="assets/projeto/Home.png" alt="Projeto 1">
       <h3>Projeto 2</h3>
       <p>Projeto Integrador - Tweeb</p>
     </div>
@@ -273,7 +273,7 @@
 </style>
 
 <!-- ____________________________________________________________________ -->
-<script src="../ZZ_ Nova pasta - Cópia/js/script.js "></script> <!-- Carregando o JS -->
+<script src="js/script.js "></script> <!-- Carregando o JS -->
 
 
 
