--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meu Portfólio - Front-End</title>
+  
   <!-- <link rel="stylesheet" href="../ZZ_ Nova pasta - Cópia/css/responsivo.css"> -->
   <link rel="stylesheet" href="css/foto.css" class="hreaf">
   <link rel="stylesheet" href="css/style3.css" class="hrea">
@@ -13,8 +14,10 @@
   <link rel="stylesheet" href="css/habilidades.css">
   <link rel="stylesheet" href="css/projetos.css">
   <link rel="stylesheet" href="css/contato.css">
+
   <!-- Importando a fonte personalizada -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
   <!-- Link para o Font Awesome (CDN) no <head> -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -49,7 +52,9 @@
     </nav>
   </header>
 
-  <!-- Seção Sobre -->        <!-- .text>span.letter*8 -->
+
+<!-- ______________________________________________________________________________ -->
+
   <section id="sobre">
   <div class="text">
     <span class="letra">S</span>
@@ -62,12 +67,14 @@
     <span class="letra">I</span>
     <span class="letra">M</span>
   </div>
-    <h1></h1> <!-- Título será digitado aqui -->
+    <h1></h1>
     <img src="assets/eu/photo_6_2024-11-21_06-16-13.jpg" alt="">
-    <p></p>  <!-- Texto será digitado aqui -->
+    <p></p> 
 </section>
 
-<!-- Seção Habilidades -->
+
+<!-- ______________________________________________________________________________ -->
+
 <section id="habilidades">
   <div class="text">
     <span class="letra">H</span>
@@ -100,7 +107,7 @@
     </div>
   </div>
 
-<!-- back end -->
+
 <div class="tittle2">
     <h1>Back-End</h1>
 </div>
@@ -122,7 +129,9 @@
 
 </section>
 
-  <!-- Seção Projetos -->
+
+<!-- ______________________________________________________________________________ -->
+
   <section id="projetos">
     <div class="text">
       <span class="letra">P</span>
@@ -134,7 +143,7 @@
       <span class="letra">O</span>
       <span class="letra">S</span>
     </div>
-    <h2></h2> <!-- Título será digitado aqui -->
+    <h2></h2>
     <div class="proj proj1">
       <img src="assets/projeto/Captura de tela_19-11-2024_85835_.jpeg" alt="Projeto 1">
       <h3>Projeto 1</h3>
@@ -156,7 +165,9 @@
 
   </section>
 
-  <!-- Seção Contato -->
+
+<!-- ______________________________________________________________________________ -->
+
   <section id="contato">
     <div class="text">
       <span class="letra">C</span>
@@ -167,43 +178,39 @@
       <span class="letra">T</span>
       <span class="letra">O</span>
       <span class="letra">S</span>
-      <h1></h1> <!-- Título será digitado aqui -->
-      <p></p>  <!-- Texto será digitado aqui -->
+      <h1></h1>
+      <p></p>
     </div>
   <div class="social-icons">
-        <!-- Ícone do WhatsApp -->
+
         <a href="https://wa.me/5567999999999" target="_blank" class="whatsapp">
-          <i class="fab fa-whatsapp"></i> <!-- Ícone do WhatsApp -->
+          <i class="fab fa-whatsapp"></i>
         </a> 
 
-        <!-- Ícone de E-mail -->
         <a href="mailto:marcos54099906@gmail.com.br" target="_blank" class="email">
-          <i class="fas fa-envelope"></i> <!-- Ícone de e-mail -->
-        </a> 
+          <i class="fas fa-envelope"></i> 
     
-        <!-- Ícone do Instagram -->
         <a href="https://www.instagram.com/" target="_blank" class="instagram">
-          <i class="fab fa-instagram"></i> <!-- Ícone do Instagram -->
+          <i class="fab fa-instagram"></i>
         </a>
 
-        <!-- Ícone do Twitter -->
         <a href="https://www.twitter.com/" target="_blank" class="twitter">
-          <i class="fa-brands fa-x-twitter"></i> <!-- Novo Ícone do X Twitter -->
+          <i class="fa-brands fa-x-twitter"></i> 
         </a>        
         
-        <!-- Ícone do GitHub -->
         <a href="https://github.com/MARCOSAWADA" target="_blank" class="github">
-          <i class="fab fa-github"></i> <!-- Ícone do GitHub -->
+          <i class="fab fa-github"></i> 
         </a>
 
-        <!-- Ícone do LinkedIn -->
         <a href="https://www.linkedin.com/" target="_blank" class="linkedin">
-          <i class="fab fa-linkedin"></i> <!-- Ícone do LinkedIn -->
+          <i class="fab fa-linkedin"></i> 
         </a> 
 
       </div>
   </section>
 
+
+<!-- ______________________________________________________________________________ -->
 
   <div class="line-loader"></div>
 
@@ -273,11 +280,8 @@
 </style>
 
 <!-- ____________________________________________________________________ -->
+
 <script src="js/script.js "></script> <!-- Carregando o JS -->
-
-
-
-
 
 </body>
 
